; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpi_support/extr_acpi_panasonic.c_hkey_lcd_brightness_min.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpi_support/extr_acpi_panasonic.c_hkey_lcd_brightness_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@panasonic = common dso_local global i32 0, align 4
@POWER_PROFILE_PERFORMANCE = common dso_local global i64 0, align 8
@HKEY_REG_LCD_BRIGHTNESS_MIN_AC = common dso_local global i32 0, align 4
@HKEY_REG_LCD_BRIGHTNESS_MIN_DC = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @hkey_lcd_brightness_min to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hkey_lcd_brightness_min(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* @panasonic, align 4
  %10 = call i32 @ACPI_SERIAL_ASSERT(i32 %9)
  %11 = call i64 (...) @power_profile_get_state()
  %12 = load i64, i64* @POWER_PROFILE_PERFORMANCE, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @HKEY_REG_LCD_BRIGHTNESS_MIN_AC, align 4
  br label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @HKEY_REG_LCD_BRIGHTNESS_MIN_DC, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %6, align 4
  switch i32 %20, label %28 [
    i32 128, label %21
    i32 129, label %23
  ]

21:                                               ; preds = %18
  %22 = load i32, i32* @EPERM, align 4
  store i32 %22, i32* %4, align 4
  br label %29

23:                                               ; preds = %18
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @acpi_panasonic_sinf(i32 %24, i32 %25)
  %27 = load i32*, i32** %7, align 8
  store i32 %26, i32* %27, align 4
  br label %28

28:                                               ; preds = %18, %23
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %21
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @ACPI_SERIAL_ASSERT(i32) #1

declare dso_local i64 @power_profile_get_state(...) #1

declare dso_local i32 @acpi_panasonic_sinf(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
